# trimja

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  crash-a1d13c32da3f0afab5fe01f367bf7a83b1cc954b  oom-1650e4d57de9536ba63afdada1448303ed63ce2c  oom-43807a5dd78d0fa9814cebec56c7549b919f36f8  oom-bbb243f4c941f380f18540f1a719af71b28e97e7  oom-d482cb844fcb00dd82af72832095337991064f17
.github/workflows/: ci.yaml
corpora/fuzzlogreader/: basic
src/: all.natvis  allocationprofiler.cpp  allocationprofiler.h  basicscope.cpp  basicscope.h  builddirutil.cpp  builddirutil.fuzz.cpp  builddirutil.h  cpuprofiler.cpp  cpuprofiler.h  depsreader.cpp  depsreader.fuzz.cpp  depsreader.h  depswriter.cpp  depswriter.h  edgescope.cpp  edgescope.h  evalstring.cpp  evalstring.h  fixed_string.cpp  fixed_string.h  graph.cpp  graph.h  indexinto.h  kinja.m.cpp  lexer.cc  lexer.h  logentry.h  logreader.cpp  logreader.fuzz.cpp  logreader.h  logwriter.cpp  logwriter.h  manifestparser.cpp  manifestparser.h  manifestwriter.cpp  manifestwriter.h  murmur_hash.cpp  murmur_hash.h  nestedscope.cpp  (+17 more)
tests/: .gitattributes  .gitignore  attached.expected.ninja  attached.ninja  chained.ninja  dependencies.expected.ninja  fan.expected.ninja  fan.ninja  pyramid.changed.txt  pyramid.expected.ninja  pyramid.ninja  simple copy.ninja
tests/absolute/: .gitignore
tests/attached/: build.ninja  expected.ninja
tests/backslashes.win32/: bootstrap.ninja  build.ninja  changed.txt  expected.ninja
tests/basic_dyndep/: build.ninja  changed.txt  expected.ninja  out.txt.d  out2.txt.d
tests/builddir/: build.ninja  expected.ninja  other.ninja
tests/chained/: build.ninja
tests/default/: build.ninja  changed.txt  expected.ninja
tests/dependencies/: build.ninja  expected.ninja
tests/dummy_edges/: README.md  build.ninja  expected.ninja
tests/duplicates/: build.ninja  expected.ninja
tests/escaping/: build.ninja  expected.ninja
tests/fan/: changed.txt  expected.ninja
tests/floating/: README.md  build.ninja  changed.txt  expected.ninja
tests/include/: build.ninja  changed.txt  expected.ninja  other.ninja
tests/kinja/basic/: expected.crlf.json  expected.json  expected.lf.json
tests/ninjalog/: README.md  bootstrap.ninja  build.ninja  expected.ninja
tests/normalizing/: build.ninja  changed.txt  expected.ninja  out3.d
tests/passthrough/: build.ninja  expected.ninja  other.ninja
tests/phony/: README.md  build.ninja  changed.txt  expected.ninja
tests/phony_default/: README.md  build.ninja  expected.ninja
tests/pyramid/: expected.ninja
tests/rspfile/: build.ninja  expected.ninja
tests/simple/: build.ninja  changed.txt  expected.ninja
tests/simple_reversed/: expected.ninja
tests/subninja/: build.ninja  expected.ninja  other.ninja
tests/trimja/attached/: expected.ninja
tests/trimja/basic_dyndep/: .ninja_deps  build.ninja  deps.json  expected.ninja
tests/trimja/bigpassthrough/: build.ninja
tests/trimja/chained/: expected.ninja
tests/trimja/default/: build.ninja  expected.ninja
tests/trimja/default_unused/: expected.ninja
tests/trimja/fan/: build.ninja  expected.ninja
tests/trimja/passthrough/: build.ninja  small.ninja
tests/trimja/pyramid/: build.ninja  changed.txt  expected.ninja
tests/trimja/simple/: expected.ninja
tests/trimja/simple_reversed/: build.ninja  expected.ninja
tests/trimja/validations/: build.ninja  expected.ninja
tests/validations/: expected.ninja
tests/variables/: build.ninja  expected.ninja
